Fix alignment of elements on starting business page

--- a/_sass/_dto.scss
+++ b/_sass/_dto.scss
@@ -712,7 +712,10 @@ Flex Layout
 @media (min-width: 768px) {
   .sidebar-nav .navbar .navbar-collapse {
     padding: 0;
-    max-height: none; }
+    max-height: none;
+    border: none;
+    background-color: white;
+  }
 
   .sidebar-nav .navbar ul {
     float: none;
